# cp_api

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
api/: CMakeLists.txt
api/include/cp_api/: framework.hpp
api/include/cp_api/components/: camera.hpp  cameraComponent.hpp  dontDestroyOnLoad.hpp  rendererComponent.hpp  transformComponent.hpp  uiComponent.hpp
api/include/cp_api/containers/: ntree.hpp  ntree.inl  spatialTree.hpp  spatialTree.inl  spatialTree2D.hpp  spatialTree3D.hpp
api/include/cp_api/core/: algorithm.hpp  compression.hpp  debug.hpp  delegate.hpp  diagnostics.hpp  events.hpp  filesystem.hpp  hybridEvents.hpp  math.hpp  security.hpp  serializable.hpp  threadPool.hpp
api/include/cp_api/graphics/: descriptorPool.hpp  frame.hpp  glfw.inc.hpp  renderTarget.hpp  renderer.hpp  vertex.hpp  vkBuffer.hpp  vulkan.hpp
api/include/cp_api/physics/: aabb.hpp  ray.hpp  spatialTree2D.hpp  spatialTree3D.hpp  terrainCollision.hpp
api/include/cp_api/shapes/: capsule.hpp  circle.hpp  frustum.hpp  plane.hpp  sphere.hpp  triangle.hpp
api/include/cp_api/window/: frame.hpp  inputManager.hpp  renderTargetManager.hpp  renderer.hpp  renderer2D.hpp  renderer3D.hpp  resourceBase.hpp  vkBuffer.hpp  vkImage.hpp  vkTexture.hpp  vulkan.hpp  window.hpp
api/include/cp_api/world/: world.hpp
api/src/: framework.cpp
api/src/components/: transformComponent.cpp
api/src/containers/: ntree.cpp  spatialTree.cpp
api/src/core/: algorithm.cpp  compression.cpp  debug.cpp  delegate.cpp  diagnostics.cpp  events.cpp  filesystem.cpp  hybridEvents.cpp  math.cpp  security.cpp  serializable.cpp  stb.inc.cpp  threadPool.cpp
api/src/graphics/: descriptorPool.cpp  glfw.inc.cpp  imgui.inc.cpp  inputManager.cpp  renderTarget.cpp  renderTargetManager.cpp  renderer.cpp  vkBuffer.cpp  vkImage.cpp  vma.inc.cpp  vulkan.cpp  window.cpp
api/src/physics/: spatialTree2D.cpp  spatialTree3D.cpp
api/src/window/: glfw.inc.cpp  imgui.inc.cpp  inputManager.cpp  renderTarget.cpp  renderTargetManager.cpp  renderer.cpp  renderer2D.cpp  renderer3D.cpp  vkBuffer.cpp  vkImage.cpp  vma.inc.cpp  vulkan.cpp  window.cpp
api/src/world/: world.cpp
app/: CMakeLists.txt  main.cpp
